# sql-fol

./: README.md  pyproject.toml
examples/: z3_equivalence.py
sql_fol/: __init__.py  annotations.py  fol_to_sql.py  sql_to_fol.py
tests/: test_translator.py
