[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-fol"
version = "0.1.0"
description = "Translate SQL ↔ First-Order Logic with Fregean semantic annotations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["sql", "logic", "fol", "semantics", "frege", "linguistics", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
sqlglot = ["sqlglot>=20"]
z3 = ["z3-solver>=4.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
